[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/nogitsune/nogi_3_1.png" type="Texture" id=1]
[ext_resource path="res://Bosses/Boss_1.gd" type="Script" id=2]
[ext_resource path="res://sprites/nogitsune/nogi_2.png" type="Texture" id=3]
[ext_resource path="res://sprites/nogitsune/nogi_4_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/nogitsune/nogi_3.png" type="Texture" id=5]
[ext_resource path="res://sprites/nogitsune/nogi_5_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/nogitsune/nogi_5.png" type="Texture" id=7]
[ext_resource path="res://sprites/nogitsune/nogi_4.png" type="Texture" id=8]
[ext_resource path="res://sprites/nogitsune/nogi_2_1.png" type="Texture" id=9]
[ext_resource path="res://sprites/nogitsune/nogi_1.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "entrada",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "esquerda",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "direita",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Boss_1" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "esquerda"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Move_Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="RpTimer" type="Timer" parent="."]

[node name="reference" type="Node2D" parent="."]

[node name="pivotBullet" type="Position2D" parent="reference"]
position = Vector2( 21.502, 0.193703 )
[connection signal="area_entered" from="." to="." method="_on_Boss_1_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RpTimer" to="." method="_on_RpTimer_timeout"]
